<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="Stato Attuale">

        <Preference
            app:key="status_service_state"
            app:title="Stato del Servizio"
            app:summary="In attesa..."
            app:icon="@drawable/ic_status_dot"
            app:selectable="false" />

        <Preference
            app:key="status_last_reading"
            app:title="Ultima Lettura Valida"
            app:summary="Nessuna lettura ancora ricevuta"
            app:icon="@drawable/ic_stat_esel_sync"
            app:selectable="false" />

        <Preference
            app:key="manual_sync_button"
            app:title="SINCRONIZZAZIONE MANUALE"
            app:summary="Forza l'invio dell'ultima lettura valida ricevuta dal sensore e resetta il ciclo."
            app:icon="@android:drawable/ic_popup_sync" />

        <Preference
            app:key="status_last_send"
            app:title="Ultimo Invio Riuscito"
            app:summary="Nessun invio ancora effettuato"
            app:icon="@drawable/ic_send_time"
            app:selectable="false" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Controllo Servizio">

        <SwitchPreferenceCompat
            app:key="enable_service"
            app:title="Attiva Monitoraggio Eversense-Reader"
            app:summary="Interruttore principale per avviare e fermare il servizio di monitoraggio in background."
            app:defaultValue="true" />

        <Preference
            app:key="battery_optimization_button"
            app:title="Impostazioni Batteria"
            app:summary="Clicca per disabilitare le ottimizzazioni della batteria e migliorare la stabilità del servizio."
            app:icon="@android:drawable/ic_lock_idle_alarm" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_language">
        <ListPreference
            app:key="app_language"
            app:title="@string/settings_language_title"
            app:summary="%s"
            app:icon="@android:drawable/ic_menu_mapmode"
            app:defaultValue="default"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values" />
    </PreferenceCategory>

    <PreferenceCategory app:title="Grafico">

        <ListPreference
            app:key="graph_duration_hours"
            app:title="Durata Grafico"
            app:summary="%s"
            app:icon="@drawable/ic_graph"
            app:defaultValue="3"
            app:entries="@array/graph_duration_entries"
            app:entryValues="@array/graph_duration_values" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Invio Dati">

        <SwitchPreferenceCompat
            app:key="send_to_AAPS"
            app:title="Invia a AAPS e xDrip"
            app:summary="Se abilitato, invia i dati BG. Selezionare 'MM640' come sorgente BG in AAPS/xDrip."
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="send_to_NS"
            app:title="Invia a NightScout"
            app:summary="Richiede NSClient o AAPS installato e configurato."
            app:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Algoritmo di Smoothing">

        <SwitchPreferenceCompat
            app:key="smooth_data"
            app:title="@string/smooth_data_title"
            app:summary="@string/smooth_data_summary"
            app:defaultValue="false" />

        <ListPreference
            app:key="smoothing_level"
            app:title="@string/smoothing_level_title"
            app:summary="%s"
            app:entries="@array/smoothing_level_entries"
            app:entryValues="@array/smoothing_level_values"
            app:defaultValue="medium"
            app:dependency="smooth_data" />

        <EditTextPreference
            app:key="lower_limit"
            app:title="@string/lower_limit_title"
            app:summary="@string/lower_limit_summary"
            app:defaultValue="65"
            app:dialogTitle="@string/lower_limit_dialog_title"
            android:inputType="number"
            app:dependency="smooth_data" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_advanced">

        <SwitchPreferenceCompat
            app:key="enable_restart_notifications"
            app:title="@string/settings_restart_notification_title"
            app:summary="@string/settings_restart_notification_summary"
            app:defaultValue="true" />

        <EditTextPreference
            app:key="log_max_lines"
            app:title="@string/settings_log_size_title"
            app:summary="@string/settings_log_size_summary"
            app:defaultValue="32000"
            app:dialogTitle="Numero massimo di righe"
            android:inputType="number" />

    </PreferenceCategory>

</PreferenceScreen>